CRUD DE FACTURA FUNCIONA EN SU TOTALIDAD, DETALLESFACTURA REALICE SUS CAPAS COMPLETAS Y INDEX - A LA ESPERA DE QUE HAGAN LAS DEMAS TABLAS PORQUE POR RAZONES DE RELACIONES NO PUEDO AVANZAR. COMIENZO A CAMBIAR DISEÑO DE LOGIN

--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/SysInventarioFacturacionAgro.UI.AppWebAspNetCore.csproj
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/SysInventarioFacturacionAgro.UI.AppWebAspNetCore.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\SysInventarioFacturacionAgro.LogicaDeNegocio\SysInventarioFacturacionAgro.LogicaDeNegocio.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\DetallesFactura\" />
+  </ItemGroup>
+
 </Project>
