CRUD FUNCIONAL DE VENTA Y DETALLE DE VENTAS, ADEMAS DE QUE CAMBIE Y MODIFIQUE TODAS LAS CAPAS DE ESTAS

--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/SysInventarioFacturacionAgro.UI.AppWebAspNetCore.csproj
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/SysInventarioFacturacionAgro.UI.AppWebAspNetCore.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Venta\" />
     <Folder Include="wwwroot\lib\startbootstrap\" />
   </ItemGroup>
 
